Refactor endpoints to start with /portfolios
